fix (deferred): fix typo + change deferred excution workflow

--- a/test.ipynb
+++ b/test.ipynb
@@ -82,6 +82,38 @@
     "    elif os.name == 'posix': \n",
     "        subprocess.run([\"open\", \"test/htmlcov/index.html\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.9695446 , 0.03420365, 1.        , 0.90440622, 0.00927965,\n",
+       "       0.78291949, 0.23193117, 0.89277142, 0.        , 0.58972763])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.dl_data_pipeline import deferred\n",
+    "from src.dl_data_pipeline import Pipeline, DATA_PLACEHOLDER as DP\n",
+    "from src.dl_data_pipeline import process_functions\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "# deferred.use_deferred_execution()\n",
+    "\n",
+    "pipe = Pipeline()\n",
+    "pipe.add_forward_process(process_functions.any_process.rescale, 0, 1)\n",
+    "\n",
+    "pipe.forward(np.random.rand(10)*50)"
+   ]
   }
  ],
  "metadata": {
