--- a/test.ipynb
+++ b/test.ipynb
@@ -2,49 +2,86 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline(forward_processes=5, forward_validators=3, backward_processes=0, backward_validators=0)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[[ 5.        , -2.61292827, -4.42140078, ...,  4.48656157,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        , -2.54745835,  4.10549163, ...,  2.77437772,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        ,  2.15823947, -0.40813999, ...,  3.02380534,\n",
+       "          5.        ,  5.        ],\n",
+       "        ...,\n",
+       "        [ 5.        ,  2.08573226,  2.25624513, ..., -0.2017486 ,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        , -1.10069021,  2.18526702, ..., -1.12005752,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        ,  5.        ,  5.        , ...,  5.        ,\n",
+       "          5.        ,  5.        ]],\n",
+       "\n",
+       "       [[ 5.        , -0.06202532, -4.49431224, ...,  4.11166736,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        , -3.02523814, -2.02113289, ...,  3.81246693,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        ,  2.64062473,  0.63177532, ..., -4.09521589,\n",
+       "          5.        ,  5.        ],\n",
+       "        ...,\n",
+       "        [ 5.        , -0.26310522, -4.60301597, ...,  0.46753433,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        ,  1.79489677,  2.9903096 , ...,  2.95598566,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        ,  5.        ,  5.        , ...,  5.        ,\n",
+       "          5.        ,  5.        ]],\n",
+       "\n",
+       "       [[ 5.        , -3.86239552, -1.20842503, ..., -1.00393437,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        , -4.01053846, -2.34460425, ...,  1.87652038,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        , -1.78116185, -1.20161084, ..., -3.17173765,\n",
+       "          5.        ,  5.        ],\n",
+       "        ...,\n",
+       "        [ 5.        , -2.16971538,  0.14666317, ...,  1.80967518,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        , -1.98938072,  4.13259595, ..., -1.89722178,\n",
+       "          5.        ,  5.        ],\n",
+       "        [ 5.        ,  5.        ,  5.        , ...,  5.        ,\n",
+       "          5.        ,  5.        ]]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from src.dl_data_pipeline.validator import TypeValidator, ShapeValidator, MinMaxValidator, MeanVarValidator\n",
+    "from src.dl_data_pipeline.pipeline.pipe_node import PipeNode\n",
     "from src.dl_data_pipeline.pipeline.data_pipeline import Pipeline\n",
-    "from tqdm import tqdm\n",
-    "import os\n",
-    "from src.dl_data_pipeline.process_functions import any_process\n",
-    "from src.dl_data_pipeline.process_functions import process_2d\n",
+    "from src.dl_data_pipeline import deferred_execution\n",
+    "from src.dl_data_pipeline.process_functions import (any_process, process_2d)\n",
     "import numpy as np\n",
     "\n",
-    "pipe = Pipeline()\n",
-    "pipe.add_forward_process(process_2d.open_rgb_image)\n",
-    "pipe.add_forward_process(any_process.rescale, min_value=0.0, max_value=1.0)\n",
-    "pipe.add_forward_process(process_2d.resize_with_max_distortion, (64, 64), 0.25, 0.0)\n",
-    "pipe.add_forward_process(process_2d.image_to_channel_num, 3, 0)\n",
-    "pipe.add_forward_process(lambda x : np.moveaxis(x, -1, 0))\n",
-    "pipe.add_forward_validator(TypeValidator(np.ndarray))\n",
-    "pipe.add_forward_validator(ShapeValidator((3, 64, 64)))\n",
-    "pipe.add_forward_validator(MinMaxValidator(0, 1))\n",
-    "# pipe.add_forward_validator(MeanVarValidator(0.5, 0.25, 0.1, 0.1))\n",
+    "@deferred_execution\n",
+    "def mul(a, b):\n",
+    "    return a*b\n",
     "\n",
-    "pictures = []\n",
-    "for root, dirs, files in os.walk(\"../\"):\n",
-    "    for file in files:\n",
-    "        if file.endswith(\".png\"):\n",
-    "            pictures.append(os.path.join(root, file))\n",
-    "    \n",
+    "input1 = PipeNode(name = \"Input1\")\n",
+    "input2 = PipeNode(name = \"Input2\")\n",
+    "x = any_process.rescale(input1, -1, 1)\n",
+    "x = process_2d.resize_with_max_distortion(x, (256, 256), 0)\n",
+    "x = process_2d.padding_2d(x, (256, 256), 1)\n",
+    "x = process_2d.image_hwc_to_chw(x)\n",
+    "out1 = mul(x, input2)\n",
     "\n",
-    "Xdata = np.zeros((len(pictures), 3, 64, 64))\n",
-    "# for i, path in enumerate(tqdm(pictures)):\n",
-    "#     Xdata [i] = pipe.forward(path)\n",
-    "    # pipe.forward(np.random.rand(1080, 1920, 3))\n",
-    "print(pipe)"
+    "pipe = Pipeline([input1, input2], out1)\n",
+    "pipe.add_validator(TypeValidator(np.ndarray), 0)\n",
+    "pipe.add_validator(ShapeValidator((3, 256, 256)), 0)\n",
+    "\n",
+    "pipe(np.random.rand(255, 253,3), 5)\n",
+    "\n"
    ]
   },
   {
@@ -79,7 +116,7 @@
     "else:\n",
     "    if os.name == 'nt':\n",
     "        os.startfile(os.path.normpath(\"test/htmlcov/index.html\"))\n",
-    "    elif os.name == 'posix': \n",
+    "    elif os.name == 'posix':\n",
     "        subprocess.run([\"open\", \"test/htmlcov/index.html\"])"
    ]
   },
@@ -132,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
