chore(pipeline): docstring

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,56 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 5.        , -2.61292827, -4.42140078, ...,  4.48656157,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        , -2.54745835,  4.10549163, ...,  2.77437772,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        ,  2.15823947, -0.40813999, ...,  3.02380534,\n",
-       "          5.        ,  5.        ],\n",
+       "array([[[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        ...,\n",
-       "        [ 5.        ,  2.08573226,  2.25624513, ..., -0.2017486 ,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        , -1.10069021,  2.18526702, ..., -1.12005752,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        ,  5.        ,  5.        , ...,  5.        ,\n",
-       "          5.        ,  5.        ]],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
        "\n",
-       "       [[ 5.        , -0.06202532, -4.49431224, ...,  4.11166736,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        , -3.02523814, -2.02113289, ...,  3.81246693,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        ,  2.64062473,  0.63177532, ..., -4.09521589,\n",
-       "          5.        ,  5.        ],\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        ...,\n",
-       "        [ 5.        , -0.26310522, -4.60301597, ...,  0.46753433,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        ,  1.79489677,  2.9903096 , ...,  2.95598566,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        ,  5.        ,  5.        , ...,  5.        ,\n",
-       "          5.        ,  5.        ]],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]],\n",
        "\n",
-       "       [[ 5.        , -3.86239552, -1.20842503, ..., -1.00393437,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        , -4.01053846, -2.34460425, ...,  1.87652038,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        , -1.78116185, -1.20161084, ..., -3.17173765,\n",
-       "          5.        ,  5.        ],\n",
+       "       [[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
        "        ...,\n",
-       "        [ 5.        , -2.16971538,  0.14666317, ...,  1.80967518,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        , -1.98938072,  4.13259595, ..., -1.89722178,\n",
-       "          5.        ,  5.        ],\n",
-       "        [ 5.        ,  5.        ,  5.        , ...,  5.        ,\n",
-       "          5.        ,  5.        ]]])"
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,23 +47,22 @@
     "import numpy as np\n",
     "\n",
     "@deferred_execution\n",
-    "def mul(a, b):\n",
-    "    return a*b\n",
+    "def mul(a, b, c):\n",
+    "    return a*b + c\n",
     "\n",
     "input1 = PipeNode(name = \"Input1\")\n",
     "input2 = PipeNode(name = \"Input2\")\n",
     "x = any_process.rescale(input1, -1, 1)\n",
-    "x = process_2d.resize_with_max_distortion(x, (256, 256), 0)\n",
-    "x = process_2d.padding_2d(x, (256, 256), 1)\n",
+    "x = process_2d.resize_with_max_distortion(x, (256, 256), 5)\n",
+    "x = process_2d.padding_2d(x, (256, 256), 0)\n",
     "x = process_2d.image_hwc_to_chw(x)\n",
-    "out1 = mul(x, input2)\n",
+    "out1 = mul(x, input2, 0)\n",
     "\n",
     "pipe = Pipeline([input1, input2], out1)\n",
     "pipe.add_validator(TypeValidator(np.ndarray), 0)\n",
     "pipe.add_validator(ShapeValidator((3, 256, 256)), 0)\n",
     "\n",
-    "pipe(np.random.rand(255, 253,3), 5)\n",
-    "\n"
+    "pipe(np.random.rand(25,25,3), 5)"
    ]
   },
   {
