chore: make docs more clear

--- a/test.ipynb
+++ b/test.ipynb
@@ -59,22 +59,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1]"
+       "'<lambda>'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipe((0,1))"
+    "pipe((0,1))\n",
+    "p = lambda x : x\n",
+    "p.__name__"
    ]
   },
   {
@@ -96,6 +98,40 @@
     "        print(key)\n",
     "\n",
     "a = Test()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import lib\n",
+    "from dl_data_pipeline import Pipeline, InputNode, deferred_execution\n",
+    "# Create input nodes\n",
+    "input_node1 = InputNode(name=\"1\")   # InputNode base name is input, it then concatenate\n",
+    "input_node2 = InputNode(name=\"2\")   # Any subname passed by user\n",
+    "# use any function, you can also create one\n",
+    "@deferred_execution\n",
+    "def sum(v1, v2):\n",
+    "    return v1 + v2\n",
+    "# create a functional PipelineNode with this function\n",
+    "add_node = sum(input_node1, input_node2)\n",
+    "# Create a pipeline\n",
+    "pipeline = Pipeline(inputs=[input_node1, input_node2], outputs=add_node)\n",
+    "# Compute pipe\n",
+    "pipeline(20, 10) # will be 30"
    ]
   }
  ],
